--- a/web/index.html
+++ b/web/index.html
@@ -1,43 +1,94 @@
-<html>
+<!doctype html>
+<html lang="en">
 	<head> 
+		<meta charset="utf-8">
 		<title>Gravity Map</title>
 		<style type="text/css">
-			html, body, #basicMap {
+			html, body, #map {
+				position: relative;
 				width: 100%;
 				height: 100%;
 				margin: 0;
+				z-index: 1;
+			}
+
+			#dateBox {
+				width: 108px;
+				position: absolute;
+				z-index: 2;
+				top: 5px;
+				left: 0;
+				right: 0;
+				margin-left: auto;
+				margin-right: auto;
+			}
+
+			#datePicker {
+				width: 108px;
+				font-family: monospace;
+				font-size: 14;
+				font-weight: bold;
+				text-align: center;
+				border: 3px solid #00008b;
+				border-radius: 10px;
+				color: #00008b;
+				background-color: white;
+			}
+
+			#dateField {
+				display: none;
 			}
 		</style>
-		<script src="http://openlayers.org/api/OpenLayers.js"></script>
-		<script>
-			function init() {
-				var options = {
+		<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+		<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+		<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+		<script src="http://openlayers.org/api/OpenLayers.js" type="text/javascript"></script>
+	</head>
+	<body>
+		<div id="map"></div>
+		<div id="dateBox">
+			<input type="text" id="datePicker">
+			<input type="text" id="dateField">
+		</div>
+		<script type="text/javascript">
+			$(document).ready(function() {
+				var layer = null;
+
+				function setMapDate() {
+					var t = $("#dateField").val() / 1000;
+					layer.url = "/tiles/z${z}-x${x}-y${y}-t" + t + ".png";
+				}
+
+				map = new OpenLayers.Map("map", {
 					controls: [
 						new OpenLayers.Control.Navigation(),
 						new OpenLayers.Control.PanZoomBar(),
 						new OpenLayers.Control.Permalink(),
 						new OpenLayers.Control.ScaleLine(),
-						new OpenLayers.Control.MousePosition(),
 						new OpenLayers.Control.KeyboardDefaults()
 					]
-				};
-				map = new OpenLayers.Map("basicMap", options);
-
-				var layer = null;
+				});
 
 				layer = new OpenLayers.Layer.OSM("World Map", "", {}, { isBaseLayer: true });
 				map.addLayer(layer);
 
 				map.zoomIn();
 
-				layer = new OpenLayers.Layer.OSM("Gravity Map",
-					"http://gravmap.atolm.net/tiles/${z}/${x}/${y}.png",
-					{ opacity: 0.25, isBaseLayer: false });
+				layer = new OpenLayers.Layer.OSM("Gravity Map", "",
+					{ opacity: 0.4, isBaseLayer: false });
+
+				$("#datePicker").datepicker({
+					dateFormat: "dd M yy",
+					firstDay: 1,
+					altField: "#dateField",
+					altFormat: "@",
+					onSelect: function() { setMapDate(); layer.redraw(true); }
+				});
+				$("#datePicker").datepicker("setDate", new Date());
+
+				setMapDate();
 				map.addLayer(layer);
-			}
+			});
 		</script>
-	</head>
-	<body onload="init();">
-		<div id="basicMap"></div>
 	</body>
 </html>
