--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
 			}
 
 			#dateBox {
-				width: 108px;
+				width: 180px;
 				position: absolute;
 				z-index: 2;
 				top: 5px;
@@ -24,9 +24,8 @@
 			}
 
 			#datePicker {
-				width: 108px;
+				width: 180px;
 				font-family: monospace;
-				font-size: 14;
 				font-weight: bold;
 				text-align: center;
 				border: 3px solid #00008b;
@@ -39,10 +38,16 @@
 				display: none;
 			}
 		</style>
-		<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
-		<script src="//code.jquery.com/jquery-1.10.2.js"></script>
-		<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-		<script src="http://openlayers.org/api/OpenLayers.js" type="text/javascript"></script>
+		<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+
+		<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/dark-hive/jquery-ui.min.css">
+		<script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+
+		<script src="//cdn.jsdelivr.net/jquery.ui.timepicker.addon/1.4.5/jquery-ui-sliderAccess.js"></script>
+		<link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.ui.timepicker.addon/1.4.5/jquery-ui-timepicker-addon.min.css">
+		<script src="//cdn.jsdelivr.net/jquery.ui.timepicker.addon/1.4.5/jquery-ui-timepicker-addon.min.js"></script>
+
+		<script src="http://openlayers.org/api/OpenLayers.js"></script>
 	</head>
 	<body>
 		<div id="map"></div>
@@ -55,8 +60,21 @@
 				var layer = null;
 
 				function setMapDate() {
-					var t = $("#dateField").val() / 1000;
+					var datetime = $("#dateField").val().split('_');
+
+					var d = datetime[0] / 1000;
+					var h = datetime[1] * 3600;
+					var m = datetime[2] * 60;
+
+					var t = d + h + m;
+
 					layer.url = "/tiles/z${z}-x${x}-y${y}-t" + t + ".png";
+				}
+
+				function getUTC() {
+					var d = new Date();
+
+					return d.getTime() + (d.getTimezoneOffset() * 60000);
 				}
 
 				map = new OpenLayers.Map("map", {
@@ -77,14 +95,18 @@
 				layer = new OpenLayers.Layer.OSM("Gravity Map", "",
 					{ opacity: 0.4, isBaseLayer: false });
 
-				$("#datePicker").datepicker({
-					dateFormat: "dd M yy",
+				$("#datePicker").datetimepicker({
+					dateFormat: "dd-M-yy",
+					timeFormat: "HH:mm 'UTC'",
 					firstDay: 1,
 					altField: "#dateField",
+					altFieldTimeOnly: false,
 					altFormat: "@",
+					altTimeFormat: "H_m",
+					altSeparator: "_",
 					onSelect: function() { setMapDate(); layer.redraw(true); }
 				});
-				$("#datePicker").datepicker("setDate", new Date());
+				$("#datePicker").datetimepicker("setDate", new Date(getUTC()));
 
 				setMapDate();
 				map.addLayer(layer);
